4auggit config --list --show-origin

--- a/src/index.css
+++ b/src/index.css
@@ -231,3 +231,16 @@ nav {
     color: var(--clr-primary-7);
   }
 }
+.search{
+  margin: 2px 2px 2px 2px;
+  padding: 10px 10px 10px 10px;
+}
+.addToCartBttn{
+  border-radius: 2px;
+  margin: 2px 2px 2px 2px;
+  padding: 10px 10px 10px 10px;
+  color: var(--clr-primary-5);
+  border-color: darkgreen;
+  color: green;
+}
+  
